crates/mecojoni-core/tests/fixtures/invalid/body-unknown-escape.meco
---
meco: 1.0
module: invalid
---

# contact
- Hello\q
